--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
                <button class="lang-ru"><a href="index.html" style="color: white;"><b> RU</b></a></button>
 
                 <li class="nav-item">
-                    <a href="#intro" style="color: yellow;" class="nav-link smoothScroll">Представление</a>
+                    <a href="#intro" style="color: #15e5e5;" class="nav-link smoothScroll">Представление</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#about" style="color: yellow;" class="nav-link smoothScroll">Обо мне</a>
+                    <a href="#about" style="color: #15e5e5;" class="nav-link smoothScroll">Обо мне</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#cert"  style="color: yellow;" class="nav-link smoothScroll">Сертификаты</a>
+                    <a href="#cert" style="color: #15e5e5;" class="nav-link smoothScroll">Сертификаты</a>
                 </li>
             </ul>
 
