--- a/index_en.html
+++ b/index_en.html
@@ -43,15 +43,15 @@ https://www.tooplate.com/view/2120-ben-resume
                     <button class="lang-eng"><a href="index_en.html" style="color: white;" >EN</a></button>
                     <button class="lang-ru"><a href="index.html" style="color: white;">RU</a></button>
                     <li class="nav-item">
-                        <a href="#intro" style="color: yellow;" class="nav-link smoothScroll">Introduction</a>
+                        <a href="#intro" style="color: #15e5e5;" class="nav-link smoothScroll">Introduction</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#about" style="color: yellow;" class="nav-link smoothScroll">About Me</a>
+                        <a href="#about" style="color: #15e5e5;" class="nav-link smoothScroll">About Me</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#contact"  style="color: yellow;" class="nav-link smoothScroll">Certificate</a>
+                        <a href="#contact" style="color: #15e5e5;" class="nav-link smoothScroll">Certificate</a>
                     </li>
                 </ul>
 
