--- a/index_en.html
+++ b/index_en.html
@@ -56,7 +56,7 @@ https://www.tooplate.com/view/2120-ben-resume
                 </ul>
 
                 <div >
-                    <a href="Zakhno Eugene resume.pdf" class="custom-btn btn" download>Download CV.pdf</a>
+                    <a href="Zakhno Eugene resume.pdf" class="custom-btn btn" download> Go download CV.pdf</a>
                 </div>
             </div>
 
@@ -74,8 +74,8 @@ https://www.tooplate.com/view/2120-ben-resume
                             <img src="images/go-logo-.png" width="200" height="200" class="img-fluid" alt="gopher">
                             <h1 class="hero-title">👋Hello, my name is Eugene🤝</h1>
                             <a href="mailto:eugenezakhno@gmail.com" class="email-link">eugenezakhno@gmail.com</a>
-                            <a href="Zakhno Eugene resume.pdf" class="custom-btn btn" download>Download CV .pdf</a>
-                            <a href="Zakhno Eugene resume.docx" class="custom-btn btn" download>Download CV .docx</a>
+                            <a href="Zakhno Eugene resume.pdf" class="custom-btn btn" download> Go download CV.pdf</a>
+                            <a href="Zakhno Eugene resume.docx" class="custom-btn btn" download>Go download CV.docx</a>
                             <br></br>
                             <b>   Find me in social:</b>
                             <br></br>
