--- a/index.html
+++ b/index.html
@@ -107,15 +107,29 @@
                     <li><strong>Дата рождения:</strong> 15 июня 1986 г.р.</li>
                     <li><strong>Адрес:</strong> 246001, г. Гомель, ул. Заводской спуск, 1а.</li>
                     <li><strong>Мобильный тел.:</strong> +375 44 734 77 60</li>
-                    <li><strong>Предпочтительный способ связи:</strong> Telegram <p> <a href="https://t.me/Yiauheni" style="text-align: center">
-                        <img src="images/telegram_1.png" width="20" height="20" class="img-fluid"  style="vertical-align: middle;" alt="@Yiauheni"> @Yiauheni                   </a></p></li>
+                    <li color="red"><strong>Предпочтительный способ связи:</strong> Telegram <p> <a href="https://t.me/Yiauheni" style="text-align: center">
+                        <img src="images/telegram_1.png" width="20" height="20" class="img-fluid"  style="vertical-align: middle;" alt="@Yiauheni"> @Yiauheni </a></p></li>
                 </ul>
             </div>
             <div>
+                <p style="color: blue;"> <strong> ЦЕЛИ: </strong> <br>
+                <p>Ищу позицию Golang разработчика (подработку или работу),
+                    чтобы применять свои навыки в разработке высоконагруженных приложений
+                    и участвовать в интересных проектах.
+                <ul>
+                    Golang разработчик:
+                   <li> Участие в разработке RESTful API на Go</li>
+                    <li> Участие в разработке Микросервисов на Go с применением gRPC (http 2.0)</li>
+                    <li> Сотрудничество с командой по Agile методологиям для эффективного выполнения задач.</li>
+                    <li> Участие в проектировании архитектуры приложений с использованием Docker и Kubernetes.</li>
+                    <li> Написание юнит-тестов и интеграционных тестов для обеспечения высокого качества кода.</li>
+                    <li> Оптимизация запросов к базе данных PostgreSQL.</li>
+                    <li> Обучение и внедрение практик CI/CD  </li>
+                </ul>
+                </p>
             <p style="color: blue;"> <strong> ОБРАЗОВАНИЕ В ОБЛАСТИ IT </strong> <br>
                 <p>IT-CLASS, Gomel 2016 - 2017.</p>
-                <p> Язык С. Знакомство с процедурным программированием;
-                Язык С++. Знакомство с объектно-ориентированным программированием;
+                <p> Языки программирования С и С++.
                 Основы Web-программирования (HTML-5, CSS-3, JavaScript, PHP);
                 Работа с базами данных, владение SQL;
                 платформа .NET. Программирование на языке C#;
@@ -136,9 +150,9 @@
                 <p>ОАО «Электроаппаратура» 2018 – 2020, Должность: ведущий инженер по охране труда.</p>
                 <p>Гомельский городской отдел по чрезвычайным ситуациям МЧС
                     2008 – 2017 Должность: инспектор государственного пожарного надзор</p>
-                <p style="color: blue;"><strong>ИНОСТРАННЫЕ ЯЗЫКИ</strong></p>
-                <p>English (B1, B2 Upper-Intermediate).</p>
 
+                <p style="color: blue;"><strong>ИНОСТРАННЫЕ ЯЗЫКИ</strong></p>
+                <p>English (A2 - Intermediate).</p>
 
                 <p style="color: blue;"><strong> ПРОЕКТЫ, УЧАСТИЕ В ПРОЕКТАХ:</strong></p>
                 <p>Опыт интеграции с платежными сервисами (в т.ч. по API): Google Pay Apple Pay
