--- a/index_en.html
+++ b/index_en.html
@@ -108,6 +108,19 @@ https://www.tooplate.com/view/2120-ben-resume
                         </ul>
                 </div>
                  <div>
+                     <p style="color: blue;"> <strong> GOALS: </strong> <br>
+                     <p>I am looking for a Golang developer position (part-time or full-time) to apply my skills in developing high-load applications and participate in interesting projects.
+                     <ul>
+                       Golang developer:
+                         <li> Participation in the development of RESTful API in Go</li>
+                         <li> Participation in the development of Microservices in Go using gRPC (http 2.0)</li>
+                         <li> Collaboration with the team on Agile methodologies to effectively complete tasks.</li>
+                         <li> Participation in the design of application architecture using Docker and Kubernetes.</li>
+                         <li> Writing unit tests and integration tests to ensure high code quality.</li>
+                         <li> Optimization of queries to the PostgreSQL database.</li>
+                         <li> Training and implementation of CI/CD practices</li>
+                     </ul>
+                     </p>
                 <p style="color: blue;"><strong> IT EDUCATION</strong> <br>
                 <p>IT-CLASS, Gomel 2016 - 2017.</p>
                 <p> C language. Introduction to procedural programming;
@@ -136,7 +149,7 @@ https://www.tooplate.com/view/2120-ben-resume
                 <p style="color: blue;"><strong>FOREIGN LANGUAGES : _ </strong></p>
                 <div>
 
-                <p>English (B1, B2 Upper Intermediate).</p>
+                <p>English (A2 Intermediate).</p>
                 </div>
                 <div>
                 <p style="margin-top: 20px;"></p>
