--- a/index_en.html
+++ b/index_en.html
@@ -109,10 +109,12 @@ https://www.tooplate.com/view/2120-ben-resume
                 </div>
                  <div>
                      <p style="color: blue;"> <strong> GOALS: </strong> <br>
-                     <p>I am looking for a Golang developer position (part-time or full-time) to apply my skills in developing high-load applications and participate in interesting projects.
+                      I am looking for a Golang developer position (part-time or full-time) to apply my skills in developing high-load applications and participate in interesting projects.
                      <ul>
-                       Golang developer:
+                      <strong> Golang developer - </strong>
+                       This is something I have studied myself:
                          <li> Participation in the development of RESTful API in Go</li>
+                         <li> Participation in the development with framework Gin</li>
                          <li> Participation in the development of Microservices in Go using gRPC (http 2.0)</li>
                          <li> Collaboration with the team on Agile methodologies to effectively complete tasks.</li>
                          <li> Participation in the design of application architecture using Docker and Kubernetes.</li>
@@ -120,7 +122,6 @@ https://www.tooplate.com/view/2120-ben-resume
                          <li> Optimization of queries to the PostgreSQL database.</li>
                          <li> Training and implementation of CI/CD practices</li>
                      </ul>
-                     </p>
                 <p style="color: blue;"><strong> IT EDUCATION</strong> <br>
                 <p>IT-CLASS, Gomel 2016 - 2017.</p>
                 <p> C language. Introduction to procedural programming;
