--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <p style="color: blue;"> <strong> ЦЕЛИ: </strong> <br>
                 <p>Ищу позицию Golang разработчика (подработку или работу),
                     чтобы применять свои навыки в разработке высоконагруженных приложений
-                    и участвовать в интересных проектах.
+                    и участвовать в интересных проектах. </p>
                 <ul>
                     Golang разработчик:
                    <li> Участие в разработке RESTful API на Go</li>
@@ -127,7 +127,7 @@
                     <li> Оптимизация запросов к базе данных PostgreSQL.</li>
                     <li> Обучение и внедрение практик CI/CD  </li>
                 </ul>
-                </p>
+
             <p style="color: blue;"> <strong> ОБРАЗОВАНИЕ В ОБЛАСТИ IT </strong> <br>
                 <p>IT-CLASS, Gomel 2016 - 2017.</p>
                 <p> Языки программирования С и С++.
