--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div>
                 <p style="color: blue;"> <strong> ЦЕЛИ: </strong> <br>
-                <p>Ищу позицию Golang разработчика (подработку или работу),
+                <p>Ищу позицию Golang разработчика (работу или подработку),
                     чтобы применять свои навыки в разработке высоконагруженных приложений
                     и участвовать в интересных проектах. </p>
                 <ul>
@@ -124,7 +124,7 @@
                     <li> Сотрудничество с командой по Agile методологиям для эффективного выполнения задач.</li>
                     <li> Участие в проектировании архитектуры приложений с использованием Docker и Kubernetes.</li>
                     <li> Написание юнит-тестов и интеграционных тестов для обеспечения высокого качества кода.</li>
-                    <li> Оптимизация запросов к базе данных PostgreSQL.</li>
+                    <li> Оптимизация запросов к базе данных PostgreSQL</li>
                     <li> Обучение и внедрение практик CI/CD  </li>
                 </ul>
 
