--- a/index_en.html
+++ b/index_en.html
@@ -114,7 +114,7 @@ https://www.tooplate.com/view/2120-ben-resume
                       <strong> Golang developer - </strong>
                        This is something I have studied myself:
                          <li> Participation in the development of RESTful API in Go</li>
-                         <li> Participation in the development with framework Gin</li>
+                     <li> Participation in the development with frameworks <b>Gin, Echo, Fiber</b></li>
                          <li> Participation in the development of Microservices in Go using gRPC (http 2.0)</li>
                          <li> Collaboration with the team on Agile methodologies to effectively complete tasks.</li>
                          <li> Participation in the design of application architecture using Docker and Kubernetes.</li>
