--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     Golang разработчик:
                    <li> Участие в разработке RESTful API на Go</li>
                     <li> Участие в разработке Микросервисов на Go с применением gRPC (http 2.0)</li>
-                    <li> Разработка приложений с помощью фреймворка Gin</li>
+                    <li> Разработка приложений с помощью фреймворков <b>Gin, Echo, Fiber</b></li>
                     <li> Сотрудничество с командой по Agile методологиям для эффективного выполнения задач.</li>
                     <li> Участие в проектировании архитектуры приложений с использованием Docker и Kubernetes.</li>
                     <li> Написание юнит-тестов и интеграционных тестов для обеспечения высокого качества кода.</li>
