--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <li> Участие в проектировании архитектуры приложений с использованием Docker и Kubernetes.</li>
                     <li> Написание юнит-тестов и интеграционных тестов для обеспечения высокого качества кода.</li>
                     <li> Оптимизация запросов к базе данных PostgreSQL</li>
-                    <li> Обучение и внедрение практик CI/CD  </li>
+                    <li> Обучение и внедрение практик CI/CD с использованием Jenkins и GitLab CI/CD.</li>
                 </ul>
 
             <p style="color: blue;"> <strong> ОБРАЗОВАНИЕ В ОБЛАСТИ IT </strong> <br>
