--- a/index_en.html
+++ b/index_en.html
@@ -120,7 +120,7 @@ https://www.tooplate.com/view/2120-ben-resume
                          <li> Participation in the design of application architecture using Docker and Kubernetes.</li>
                          <li> Writing unit tests and integration tests to ensure high code quality.</li>
                          <li> Optimization of queries to the PostgreSQL database.</li>
-                         <li> Training and implementation of CI/CD practices</li>
+                         <li> Training and implementation of CI/CD practices with Jenkins and GitLab CI/CD.</li>
                      </ul>
                 <p style="color: blue;"><strong> IT EDUCATION</strong> <br>
                 <p>IT-CLASS, Gomel 2016 - 2017.</p>
