--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
             <div>
                 <p style="color: blue;"> <strong> ЦЕЛИ: </strong> <br>
                 <p>Ищу позицию Golang разработчика (работу или подработку),
-                    чтобы применять свои навыки в разработке высоконагруженных приложений
-                    и участвовать в интересных проектах. </p>
+                чтобы применять свои навыки в <b>Backend</b>-разработке на Go </p>
                 <ul>
                     Golang разработчик:
                    <li> Участие в разработке RESTful API на Go</li>
