--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
+    <link type="Image/x-icon" href="images/go-favicon.ico" rel="icon">
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/resume-style.css">
     <!--
